--- a/.github/workflows/automation.yaml
+++ b/.github/workflows/automation.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-        registry-url: [https://registry.npmjs.org]
+        registry-url: ['https://registry.npmjs.org']
 
     steps:
       - uses: actions/checkout@v2
